# aplicaciones_modelos_lenguaje_IA_generativa_4222155

./: README.md
01_Notebooks/: 2.3.env_config.ipynb
agent_langgraph/: agent_langgraph.ipynb  pyproject.toml
agent_notebooks/: agent_langgraph.ipynb  help_desk_agent.ipynb  it_actions_mcp_server.py  it_requests.json  learn_graph_api.ipynb  main.py  mcp_langgraph.ipynb  pyproject.toml  use_case.md
