[project]
name = "agent-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.4",
    "langchain-anthropic>=1.3.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "mcp>=1.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
